Added Folder FAB

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -26,7 +26,7 @@
 							<ng-include  ng-if="!account.active" src="'./Views/img/icons/ic_cloud_off_48px.svg'"></ng-include>
                         </div>
 					 class="account-check-{{$index}}"-->
-						<md-checkbox ng-model="account.active" aria-label="{{account.username}}" id="account-check-{{$index}}"></md-checkbox>
+                        <md-checkbox ng-model="account.active" aria-label="{{account.username}}" id="account-check-{{$index}}"></md-checkbox>
                         <div class="md-list-item-text">
                             <h3>{{account.type}}</h3>
                             <h4>{{account.username}}</h4>
@@ -97,6 +97,19 @@
                             </md-grid-list>
                         </div>
                     </section>
+					<md-fab-speed-dial md-open="ui.fab.isOpen" md-direction="left" style="position: fixed; right: 32px; bottom: 32px;">
+						<md-fab-trigger>
+							<md-button aria-label="menu" class="md-fab md-warn">
+								<md-icon md-svg-src="./Views/img/icons/ic_add_48px.svg"></md-icon>
+							</md-button>
+						</md-fab-trigger>
+
+						<md-fab-actions>
+							<!--<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
+								<md-icon md-svg-src="img/icons/twitter.svg" aria-label="Twitter"></md-icon>
+							</md-button>-->
+						</md-fab-actions>
+					</md-fab-speed-dial>
                 </div>
                 <div ng-hide="filteredFiles.length || folder.subfolders.length" layout="column" layout-align="center center" flex>
                     <h1 class="md-body-1">This folder is empty.
@@ -106,11 +119,6 @@
             <div ng-hide="activeAccounts.length" layout="column" layout-align="center center" flex>
                 <h1 class="md-body-1">There are no active accounts.
                 </h1>
-                <p ng-repeat="ac in acctiveAccounts">
-                    {{ac.username}}
-                    |
-                    {{ac.active}}
-                </p>
             </div>
         </md-content>
     </div>
