Added karma testing setup

--- a/client/Views/_home.html
+++ b/client/Views/_home.html
@@ -18,8 +18,8 @@
 				</div>
 			</md-card-content>
 			<md-card-actions layout="row" layout-align="end center">
-				<md-button ng-click="login()">{{ "LOGIN.LOGIN" | translate }}</md-button>
-				<md-button ng-click="signup()" class="md-primary">{{ "SIGNUP.SIGNUP" | translate }}</md-button>
+				<md-button ng-click="login()" id="login">{{ "LOGIN.LOGIN" | translate }}</md-button>
+				<md-button ng-click="signup()" class="md-primary" id="signup">{{ "SIGNUP.SIGNUP" | translate }}</md-button>
 	    	</md-card-actions>
 		</md-card>
 	</md-content>
