Fixed some of Google Sign In.
Still getting a 404.  Will try to work out in next meeting.

--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -12,7 +12,7 @@
 
 		<script type="text/ng-template" id="new_account_buttons.html">
 			<div class="md-dialog-content" layout="row" layout-align="center center" layout-fill="">
-				<div id="google-signin">Sign into your google account</div>
+				<div class="g-signin2" data-onsuccess="google.signin">Google Sign In</div>
 			</div>
 		</script>
 
