--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -1,3 +1,5 @@
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
 <md-dialog aria-label="Add Account">
 	<form ng-cloak>
 		<md-toolbar>
