--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -12,7 +12,8 @@
 
 		<script type="text/ng-template" id="new_account_buttons.html">
 			<div class="md-dialog-content" layout="row" layout-align="center center" layout-fill="">
-				<google-sign-in-button button-id="google-signin-button" options="google"></google-sign-in-button>
+				<!--<google-sign-in-button button-id="google-signin-button" options="google"></google-sign-in-button>-->
+				<button ng-click="login_google()">Login Google</button>
 			</div>
 		</script>
 
