--- a/client/Views/_signup.html
+++ b/client/Views/_signup.html
@@ -63,7 +63,8 @@
 							<div ng-messages="signupForm.password.$error" role="alert">
 								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 								<div ng-message="minlength">Too Short</div>
-								<div ng-message="onlyLowerCase"></div>
+								<div ng-message="onlyLowerCase">All Lower Case</div>
+								<div ng-message="onlyUpperCase">All Upper Case</div>
 							</div>
 						</md-input-container>
 						<md-input-container>
