--- a/client/Views/_signup.html
+++ b/client/Views/_signup.html
@@ -59,7 +59,7 @@
 					<div layout-gt-xs="row" layout="column">
 						<md-input-container>
 							<label>{{ "GENERAL.PASSWORD" | translate }}</label>
-							<input ng-model="password" type="password" name="password" ng-change="signupForm.confirmPassword.$validate();" ng-disabled="loading.is" ng-minlength="6" required only-lower-case only-upper-case></input>
+							<input ng-model="password" type="password" name="password" ng-change="signupForm.confirmPassword.$validate();" ng-disabled="loading.is" ng-minlength="6" required only-lower-case only-upper-case ng-trim="false"></input>
 							<div ng-messages="signupForm.password.$error" role="alert">
 								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 								<div ng-message="minlength">Too Short</div>
@@ -69,7 +69,7 @@
 						</md-input-container>
 						<md-input-container>
 							<label>{{ "SIGNUP.CONFIRM_PASSWORD" | translate }}</label>
-							<input ng-model="confirmPassword" name="confirm_password" data-match="signupForm.password" type="password" ng-disabled="loading.is" required></input>
+							<input ng-model="confirmPassword" name="confirm_password" data-match="signupForm.password" type="password" ng-disabled="loading.is" required ng-trim="false"></input>
 							<div ng-messages="signupForm.confirm_password.$error" role="alert">
 								<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 								<div ng-message="match">{{ "SIGNUP.CONFIRM_PASSWORD_NO_MATCH" | translate }}</div>
