Added file sorting by name

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -18,7 +18,7 @@
 			<!--	TODO: place directory tree -->
 			<section>
 				<md-subheader class="md-primary subhead-no-padding">
-					<div  layout="row" layout-align="center center" style="padding-left: 16px;">
+					<div layout="row" layout-align="center center" style="padding-left: 16px;">
 						<h3 class="md-subhead">Accounts</h3>
 						<span flex=""></span>
 						<md-button class="md-icon-button md-primary md-mini" aria-label="New Account" ng-click="ui.new_account($event)">
@@ -53,6 +53,31 @@
 					</md-button>
 					<h1>CloudView</h1>
 					<span flex></span>
+					<md-menu md-position-mode="target-right target">
+						<md-button aria-label="Open sort interactions menu" class="md-icon-button md-toolbar-button" ng-click="$mdOpenMenu($event)">
+							<md-icon md-menu-origin md-svg-icon="./Views/img/icons/ic_sort_48px.svg"></md-icon>
+						</md-button>
+						<md-menu-content width="3">
+							<div ng-repeat="field in ui.sort.fields">
+								<md-menu-item>
+									<md-button ng-click="ui.sort.sort(field.value, false)">
+										<div layout="row" flex>
+											<span flex="">{{field.display}}</span>
+											<md-icon ng-if="field.has_direction" md-svg-icon="./Views/img/icons/ic_arrow_upward_48px.svg" md-menu-align-target style="margin: auto 3px auto 0;"></md-icon>
+										</div>
+									</md-button>
+								</md-menu-item>
+								<md-menu-item ng-if="field.has_direction">
+									<md-button ng-click="ui.sort.sort(field.value, true)">
+										<div layout="row" flex>
+											<span flex="">{{field.display}}</span>
+											<md-icon md-svg-icon="./Views/img/icons/ic_arrow_downward_48px.svg" md-menu-align-target style="margin: auto 3px auto 0;"></md-icon>
+										</div>
+									</md-button>
+								</md-menu-item>
+							</div>
+						</md-menu-content>
+					</md-menu>
 				</div>
 				<span flex></span>
 				<div layout="row" style="overflow-x: auto;" class="md-toolbar-tools">
@@ -67,64 +92,64 @@
 		<md-content layout="column" flex>
 			<!-- TODO: stuff goes here -->
 			<!--<div ng-show="(activeAccounts=(user.accounts | filter: {active: true })).length"> -->
-				<div ng-show="(filteredFiles=(folder.files | selectedAccounts: user.accounts)).length || folder.subfolders.length">
-					<section ng-show="folder.subfolders.length">
-						<md-subheader class="md-primary">
-							<span style="padding-left: 8px;">Folders</span>
-						</md-subheader>
-						<div layout="row" layout-wrap class="md-padding" style="padding-top: 0px;">
-							<div flex-xs="100" flex-sm="50" flex-md="25" flex-lg="20" flex-xl="10" ng-repeat="sub in folder.subfolders">
-								<md-card ng-click="ui.folder.go(sub.id)">
-									<md-tooltip md-delay="1000">
+			<div ng-show="(filteredFiles=(folder.files | selectedAccounts: user.accounts)).length || folder.subfolders.length">
+				<section ng-show="folder.subfolders.length">
+					<md-subheader class="md-primary">
+						<span style="padding-left: 8px;">Folders</span>
+					</md-subheader>
+					<div layout="row" layout-wrap class="md-padding" style="padding-top: 0px;">
+						<div flex-xs="100" flex-sm="50" flex-md="25" flex-lg="20" flex-xl="10" ng-repeat="sub in folder.subfolders | sortFiles: ui.sort.field : ui.sort.reverse">
+							<md-card ng-click="ui.folder.go(sub.id)">
+								<md-tooltip md-delay="1000">
+									{{sub.name}}
+								</md-tooltip>
+								<md-card-content layout="row" layout-align="start center" style="padding: .5rem; overflow: hidden;">
+									<img src="Views/img/icons/folder.svg" style="height: 2rem; padding-right: .5rem;" />
+									<p style="margin-top: 8px; margin-bottom: 8px; display: block; width: 100%" class="folder_item md-body-1">
 										{{sub.name}}
+									</p>
+								</md-card-content>
+							</md-card>
+						</div>
+					</div>
+				</section>
+				<section ng-show="filteredFiles.length">
+					<md-subheader class="md-primary">
+						<span style="padding-left: 8px;">Files</span>
+					</md-subheader>
+					<div class="md-padding" style="padding-top: 0px;">
+						<md-grid-list id="files" md-cols-xs="2" md-cols-sm="4" md-cols-md="8" md-cols-lg="10" md-cols-xl="20" md-row-height="1:1" md-gutter="12px" md-gutter-gt-sm="8px">
+							<md-grid-tile ng-repeat="file in filteredFiles | sortFiles: ui.sort.field : ui.sort.reverse" class="account-{{file.account}}" ng-click="ui.file.open(file.id)">
+								<md-grid-tile-footer class="folder_file">
+									<md-tooltip md-delay="1000">
+										{{file.name}}
 									</md-tooltip>
-									<md-card-content layout="row" layout-align="start center" style="padding: .5rem; overflow: hidden;">
-										<img src="Views/img/icons/folder.svg" style="height: 2rem; padding-right: .5rem;" />
-										<p style="margin-top: 8px; margin-bottom: 8px; display: block; width: 100%" class="folder_item md-body-1">
-											{{sub.name}}
-										</p>
-									</md-card-content>
-								</md-card>
-							</div>
-						</div>
-					</section>
-					<section ng-show="filteredFiles.length">
-						<md-subheader class="md-primary">
-							<span style="padding-left: 8px;">Files</span>
-						</md-subheader>
-						<div class="md-padding" style="padding-top: 0px;">
-							<md-grid-list id="files" md-cols-xs="2" md-cols-sm="4" md-cols-md="8" md-cols-lg="10" md-cols-xl="20" md-row-height="1:1" md-gutter="12px" md-gutter-gt-sm="8px">
-								<md-grid-tile ng-repeat="file in filteredFiles" class="account-{{file.account}}" ng-click="ui.file.open(file.id)">
-									<md-grid-tile-footer class="folder_file">
-										<md-tooltip md-delay="1000">
-											{{file.name}}
-										</md-tooltip>
-										<h3 style="margin: 16px;" class="folder_item">{{file.name}}</h3>
-									</md-grid-tile-footer>
-								</md-grid-tile>
-							</md-grid-list>
-						</div>
-					</section>
-				</div>
-				<div ng-hide="filteredFiles.length || folder.subfolders.length" layout="column" layout-align="center center" flex>
-					<h1 class="md-body-1">This folder is empty.
+									<h3 style="margin: 16px;" class="folder_item">{{file.name}}</h3>
+								</md-grid-tile-footer>
+							</md-grid-tile>
+						</md-grid-list>
+					</div>
+				</section>
+			</div>
+			<div ng-hide="filteredFiles.length || folder.subfolders.length" layout="column" layout-align="center center" flex>
+				<h1 class="md-body-1">This folder is empty.
                     </h1>
-				</div>
-				<md-fab-speed-dial md-open="ui.fab.isOpen" md-direction="left" ng-class="'md-scale'" style="position: fixed; right: 32px; bottom: 32px;">
-					<md-fab-trigger>
-						<md-button aria-label="Add" class="md-fab">
-							<md-icon md-svg-src="./Views/img/icons/ic_add_48px.svg"></md-icon>
-						</md-button>
-					</md-fab-trigger>
-					<md-fab-actions>
-						<md-button aria-label="New File" class="md-fab md-raised md-mini" ng-click="ui.folder.new_file()">
-							<md-icon md-svg-src="./Views/img/icons/ic_note_add_48px.svg" aria-label="New File"></md-icon>
-						</md-button>
-						<md-button aria-label="New Folder" class="md-fab md-raised md-mini" ng-click="ui.folder.new_folder()">
-							<md-icon md-svg-src="./Views/img/icons/folder.svg" aria-label="New Folder"></md-icon>
-						</md-button>
-					</md-fab-actions>
-				</md-fab-speed-dial>
+			</div>
+			<md-fab-speed-dial md-open="ui.fab.isOpen" md-direction="left" ng-class="'md-scale'" style="position: fixed; right: 32px; bottom: 32px;">
+				<md-fab-trigger>
+					<md-button aria-label="Add" class="md-fab">
+						<md-icon md-svg-src="./Views/img/icons/ic_add_48px.svg"></md-icon>
+					</md-button>
+				</md-fab-trigger>
+				<md-fab-actions>
+					<md-button aria-label="New File" class="md-fab md-raised md-mini" ng-click="ui.folder.new_file()">
+						<md-icon md-svg-src="./Views/img/icons/ic_note_add_48px.svg" aria-label="New File"></md-icon>
+					</md-button>
+					<md-button aria-label="New Folder" class="md-fab md-raised md-mini" ng-click="ui.folder.new_folder()">
+						<md-icon md-svg-src="./Views/img/icons/folder.svg" aria-label="New Folder"></md-icon>
+					</md-button>
+				</md-fab-actions>
+			</md-fab-speed-dial>
 			<!--</div>
 			<div ng-hide="activeAccounts.length" layout="column" layout-align="center center" flex>
 				<h1 class="md-body-1">There are no active accounts.
