Made dropbox authentication work.

--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -15,6 +15,7 @@
 				<!-- https://developers.google.com/identity/sign-in/web/server-side-flow -->
 				<!--<google-sign-in-button button-id="google-signin-button" options="google"></google-sign-in-button>-->
 				<button ng-click="login_google()">Login Google</button>
+				<button ng-click="login_dropbox()">Login Dropbox</button>
 			</div>
 		</script>
 
