Add onedrive login button

--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -16,6 +16,7 @@
 				<!--<google-sign-in-button button-id="google-signin-button" options="google"></google-sign-in-button>-->
 				<button ng-click="login_google()">Login Google</button>
 				<button ng-click="login_dropbox()">Login Dropbox</button>
+				<button ng-click="login_onedrive()">Login Dropbox</button>
 			</div>
 		</script>
 
