Made it so you can download/view google drive files

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -122,7 +122,7 @@
 					</md-subheader>
 					<div class="md-padding" style="padding-top: 0px;">
 						<md-grid-list id="files" md-cols-xs="2" md-cols-sm="4" md-cols-md="8" md-cols-lg="10" md-cols-xl="20" md-row-height="1:1" md-gutter="12px" md-gutter-gt-sm="8px">
-							<md-grid-tile ng-repeat="file in filteredFiles | sortFiles: ui.sort.field : ui.sort.reverse" class="account-{{file.account}}" ng-click="ui.file.open(file.id, file.webContentLink)">
+							<md-grid-tile ng-repeat="file in filteredFiles | sortFiles: ui.sort.field : ui.sort.reverse" class="account-{{file.account}}" ng-click="ui.file.open(file.webContentLink, file.webViewLink)">
 								<md-grid-tile-footer class="folder_file">
 									<md-tooltip md-delay="1000">
 										{{file.name}}
