front end file upload

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -142,7 +142,7 @@
 					</md-button>
 				</md-fab-trigger>
 				<md-fab-actions>
-					<md-button aria-label="New File" class="md-fab md-raised md-mini" ng-click="ui.folder.new_file()">
+					<md-button aria-label="New File" class="md-fab md-raised md-mini" ng-click="ui.file.new_file()">
 						<md-icon md-svg-src="./Views/img/icons/ic_note_add_48px.svg" aria-label="New File"></md-icon>
 					</md-button>
 					<md-button aria-label="New Folder" class="md-fab md-raised md-mini" ng-click="ui.folder.new_folder()">
