Fixed angular depends

--- a/client/Views/_new_file_dialog.html
+++ b/client/Views/_new_file_dialog.html
@@ -12,7 +12,7 @@
 
 		<script type="text/ng-template" id="new_file_content.html">
 			<md-input-container>
-				<label>Folder Name</label>
+				<label>File Name</label>
 				<input ng-model="name" type="text" name="name" required></input>
 				<div ng-messages="newFileForm.name.$error" role="alert">
 					<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
