--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -78,6 +78,24 @@
 							</div>
 						</md-menu-content>
 					</md-menu>
+					<md-menu md-position-mode="target-right target">
+						<md-button aria-label="Open sort interactions menu" class="md-icon-button md-toolbar-button" ng-click="$mdOpenMenu($event)">
+							<md-icon md-menu-origin md-svg-icon="./Views/img/icons/ic_content_paste_48px.svg"></md-icon>
+						</md-button>
+						<md-menu-content width="4">
+							<md-menu-item ng-repeat="file in clipboard.files">
+								<md-button ng-click="clipboard.paste(file.id)">
+									<div layout="row" flex>
+										<md-icon ng-if="!file.isFolder" md-svg-icon="./Views/img/icons/ic_description_48px.svg" md-menu-align-target style="margin: auto 3px auto 0;"></md-icon>
+										<md-icon ng-if="file.isFolder" md-svg-icon="./Views/img/icons/folder.svg" md-menu-align-target style="margin: auto 3px auto 0;"></md-icon>
+										<span flex="">{{file.name}}</span>
+									</div>
+								</md-button>
+							</md-menu-item>
+							<div ng-if="!clipboard.files.length" layout-align="center center" layout="column" style ="min-height: 200px;">
+								<p>Your clipboard is empty!</p>
+							</div>
+						</md-menu-content>
 				</div>
 				<span flex></span>
 				<div layout="row" style="overflow-x: auto;" class="md-toolbar-tools">
@@ -114,7 +132,12 @@
 										</md-button>
 										<md-menu-content width="3">
 											<md-menu-item>
-												<md-button ng-click="folder.delete_folder(file.id)">
+												<md-button ng-click="folder.move_folder(sub.id)">
+													Move
+												</md-button>
+											</md-menu-item>
+											<md-menu-item>
+												<md-button ng-click="folder.delete_folder(sub.id)">
 													Delete
 												</md-button>
 											</md-menu-item>
