Changed ui code to match expected controller design

--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -132,12 +132,12 @@
 										</md-button>
 										<md-menu-content width="3">
 											<md-menu-item>
-												<md-button ng-click="folder.move_folder(sub.id)">
+												<md-button ng-click="folder.move_folder(sub)">
 													Move
 												</md-button>
 											</md-menu-item>
 											<md-menu-item>
-												<md-button ng-click="folder.delete_folder(sub.id)">
+												<md-button ng-click="folder.delete_folder(sub)">
 													Delete
 												</md-button>
 											</md-menu-item>
@@ -167,17 +167,17 @@
 									</md-button>
 									<md-menu-content width="3">
 										<md-menu-item>
-											<md-button ng-click="folder.download_file(file.id)">
+											<md-button ng-click="folder.download_file(file)">
 												Download
 											</md-button>
 										</md-menu-item>
 										<md-menu-item>
-											<md-button ng-click="folder.move_file(file.id)">
+											<md-button ng-click="folder.move_file(file)">
 												Move
 											</md-button>
 										</md-menu-item>
 										<md-menu-item>
-											<md-button ng-click="folder.delete_file(file.id)">
+											<md-button ng-click="folder.delete_file(file)">
 												Delete
 											</md-button>
 										</md-menu-item>
